--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<div class="boo"></div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+  <title>Numerological Name Calculator</title>
+</head>
+<body>
+  <h1>Your ideal numerological name</h1>
+  <ul class="name-list">
+  </ul>
+</body>
+</html>
