Added code from live coding excercise

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <h1>Your ideal numerological name</h1>
   <ul class="name-list">
   </ul>
+  <p class="error">No matching names</p>
+  <input type="number" name="yourNumber" id="yourNumber" placeholder="Your ideal number">
+  <input type="submit" name="btnSubmit" id="btnSubmit" value="Go">
 </body>
 </html>
